--- a/src/app/bugs/bugs.component.html
+++ b/src/app/bugs/bugs.component.html
@@ -16,7 +16,7 @@
 
     </form>
     
-    <div class="sb-button" (click)="insertBug()">Send</div>
+    <div class="spotbie-button" (click)="insertBug()">Send</div>
 
 </div>
 
