--- a/src/app/business/business.component.html
+++ b/src/app/business/business.component.html
@@ -5,9 +5,9 @@
     <app-menu-logged-out #appMenuLoggedOut 
                         class="spotbie-app-menu" 
                         (spawnCategoriesOut)="spawnCategories($event)" 
-                        (openWelcome)="openWelcome()">
+                        (openHome)="openHome()">
     </app-menu-logged-out>
-
+    
     <div class="spotbie-menu-page-padding-top-not-logged"></div>    
 
 </div>
