--- a/src/app/helpers/toast-helper/toast-helper.component.css
+++ b/src/app/helpers/toast-helper/toast-helper.component.css
@@ -2,7 +2,7 @@
     position: relative;
     margin: 0 auto;
 }
-.sb-button-mini{
+.spotbie-button-mini{
     max-width: 200px;
     width: 200px;
     min-width: unset !important;
