--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,7 +4,7 @@
     
     <app-menu-logged-out class="spotbie-app-menu" 
                         (spawnCategoriesOut)="spawnCategories($event)" 
-                        (openWelcome)="openWelcome()">
+                        (openHome)="openHome()">
     </app-menu-logged-out>
 
     <div class="spotbie-menu-page-padding-top-not-logged"></div>
