--- a/src/app/spotbie/my-favorites/my-favorites.component.html
+++ b/src/app/spotbie/my-favorites/my-favorites.component.html
@@ -83,7 +83,7 @@
     
     </div>     
 
-    <div class='spotbie-load-more-button sb-button' *ngIf="loadMore" (click)="loadMoreFavorites()">load more</div>
+    <div class='spotbie-load-more-button spotbie-button' *ngIf="loadMore" (click)="loadMoreFavorites()">load more</div>
 
     <div class='spotbie-no-notis-box' *ngIf="noFavorites">
         <div>
