--- a/src/app/spotbie/spotbie-logged-in/business-dashboard/business-dashboard.component.html
+++ b/src/app/spotbie/spotbie-logged-in/business-dashboard/business-dashboard.component.html
@@ -1,27 +1,39 @@
 <div class="wrapper">
 
     <!-- Check if user has any pending steps to start using their business -->
-    
-    <!-- Display an option to use set their Loyaty Points -->
 
-    <div class="sb-dashboardWrapper" #qrCodeAppAnchor>
-        <app-qr [fullScreenWindow]="false" (openUserLPBalanceEvt)="openLoyaltyPoints()" #qrApp></app-qr>
+    <div class="sb-dashboardWrapper sb-v-wrapper" style="display: grid; align-content: center;" *ngIf="displayBusinessSetUp" #businessSettingsAppAnchor>
+
+        <i class="fas fa-exclamation-triangle"></i>
+
+        <h2 class="spotbie-text-gradient text-uppercase mt-4" style="display: inline-block;">BONKERS!</h2>
+
+        <p class="spotbie-text-gradient mb-4">
+            Looks like you need to finish setting up your account before starting to use our service.<br/>            
+        </p>
+
+        <div class="spotbie-button" (click)="openSettings()">
+            <span class="spotbie-text-gradient text-uppercase mt-5 cursor-pointer">CLICK HERE TO FINISH</span>
+        </div>        
+
+    </div> 
+
+    <div class="sb-dashboardWrapper" #qrCodeAppAnchor *ngIf="!displayBusinessSetUp && businessFetched">
+      <app-qr [fullScreenWindow]="false" 
+                (openUserLPBalanceEvt)="openLoyaltyPoints()" 
+                (notEnoughLpEvt)="openLoyaltyPoints()" #qrApp></app-qr>
     </div>    
 
-    <div class="sb-dashboardWrapper" #lpAppAnchor>
+    <div class="sb-dashboardWrapper" #lpAppAnchor *ngIf="!displayBusinessSetUp && businessFetched">
         <app-loyalty-points [fullScreenWindow]="false" #loyaltyPointsApp></app-loyalty-points>
     </div>
     
-    <div class="sb-dashboardWrapper" #rewardMenuAppAnchor>
-        <app-reward-menu [fullScreenWindow]="false" #rewardMenuApp></app-reward-menu>
+    <div class="sb-dashboardWrapper" #rewardMenuAppAnchor *ngIf="!displayBusinessSetUp && businessFetched">
+        <app-reward-menu [fullScreenWindow]="false" (notEnoughLpEvt)="openLoyaltyPoints()" #rewardMenuApp></app-reward-menu>
     </div>
 
-</div>
-
-<div class="sb-footer pt-5 pb-5">
-
-    <p [routerLink]="['/terms']">Terms & Privacy Policy</p>
-    <img class="mt-3 mb-3" src="assets/images/home_imgs/logo_spotbie-02.svg" />
-    <p [routerLink]="['/terms']">SpotBie, LLC.&copy; Copyright 2021</p>
+    <div class="sb-dashboardWrapper" #adManagerAppAnchor *ngIf="!displayBusinessSetUp && businessFetched">
+        <app-ad-manager [fullScreenWindow]="false" #adManagerApp></app-ad-manager>
+    </div>
 
 </div>
