--- a/src/app/spotbie/spotbie-logged-in/loyalty-points/loyalty-points.component.html
+++ b/src/app/spotbie/spotbie-logged-in/loyalty-points/loyalty-points.component.html
@@ -130,7 +130,7 @@
 
             </div>
 
-            <div class='sb-button text-uppercase mt-3' (click)="submitBusinessLoyaltyPoints()">
+            <div class='spotbie-button text-uppercase mt-3' (click)="submitBusinessLoyaltyPoints()">
                 SAVE
             </div>    
 
@@ -141,8 +141,6 @@
 
         </div>
 
-        <app-reward-menu loyaltyPoints="{{ loyaltyPoints$ | async }}" (closeWindowEvt)="closeThis()"></app-reward-menu>
-        
     </div>
 
 </div>
