--- a/src/app/spotbie/spotbie-logged-in/reward-menu/reward-menu.component.html
+++ b/src/app/spotbie/spotbie-logged-in/reward-menu/reward-menu.component.html
@@ -59,4 +59,5 @@
                     (closeRewardCreatorAndRefetchRewardListEvt)="closeRewardCreatorAndRefetchRewardList()"
                     (closeWindowEvt)="closeWindow()"
                     (closeThisEvt)="closeRewardCreator()"
+                    #rewardCreator
                     [reward]="reward"></app-reward-creator>
