--- a/src/app/spotbie/spotbie-logged-out/forgot-password/forgot-password.component.css
+++ b/src/app/spotbie/spotbie-logged-out/forgot-password/forgot-password.component.css
@@ -30,7 +30,7 @@
     margin-top: 20px;
     margin-bottom: 20px;
 }
-.sb-button{
+.spotbie-button{
     width: 350px;
     min-width: 350px;
     max-width: 350px;   
@@ -92,7 +92,7 @@
         min-width: 95%;
         max-width: 95%;        
     }    
-    .sb-button{
+    .spotbie-button{
         width: 80%;
         min-width: 80%;
         max-width: 80%;
