--- a/src/app/spotbie/spotbie-logged-out/forgot-password/forgot-password.component.html
+++ b/src/app/spotbie/spotbie-logged-out/forgot-password/forgot-password.component.html
@@ -46,7 +46,7 @@
             type="text" 
             placeholder="Phone Number or E-Mail"/>
 
-      <button class="sb-button spotbie-padding spotbie-margin" (click)="setPassResetPin()">
+      <button class="spotbie-button spotbie-padding spotbie-margin" (click)="setPassResetPin()">
         Send Reset Link
       </button>
 
@@ -142,7 +142,7 @@
         </tr>
 
         <tr>
-            <td class='sb-button' (click)="completeSavePassword()">
+            <td class='spotbie-button' (click)="completeSavePassword()">
                 Save New Password
             </td>
         </tr>
