--- a/src/app/spotbie/spotbie-logged-out/log-in/log-in.component.css
+++ b/src/app/spotbie/spotbie-logged-out/log-in/log-in.component.css
@@ -126,7 +126,7 @@
     .spotbie-input-info{
         font-size: 16px;
     }
-    .sb-button{
+    .spotbie-button{
         font-size: 13px;
     }
     .spotbie-toggle {
