--- a/src/app/spotbie/spotbie-logged-out/log-in/log-in.component.html
+++ b/src/app/spotbie/spotbie-logged-out/log-in/log-in.component.html
@@ -95,17 +95,17 @@
 
     <input id="spotbieRememberMe" type="hidden" [value]="rememberMeState" />
 
-    <button class="btn sb-button spotbie-padding">
+    <button class="btn spotbie-button spotbie-padding">
       LOGIN
     </button>
 
   </form>
 
-  <button class="btn sb-button sb-fb-logIn-btn spotbie-padding" (click)="signInWithFB()">
+  <button class="btn spotbie-button sb-fb-logIn-btn spotbie-padding" (click)="signInWithFB()">
     LOGIN WITH FACEBOOK <!--<i class="fa fa-facebook"></i>-->
   </button>
 
-  <button class="btn sb-button sb-google-logIn-btn spotbie-padding" (click)="signInWithGoogle()">
+  <button class="btn spotbie-button sb-google-logIn-btn spotbie-padding" (click)="signInWithGoogle()">
     LOGIN WITH GOOGLE <!--<i class="fa fa-google-plus"></i>-->
   </button>
 
