--- a/src/app/spotbie/spotbie-logged-out/sign-up/sign-up.component.html
+++ b/src/app/spotbie/spotbie-logged-out/sign-up/sign-up.component.html
@@ -146,7 +146,7 @@
 
         </table>                  
 
-        <button class='btn sb-button spotbie-padding'>SIGN UP</button>
+        <button class='btn spotbie-button spotbie-padding'>SIGN UP</button>
 
         <p class='spotbie-rel-div
                     spotbie-padding
@@ -158,11 +158,11 @@
 
     </form>
 
-    <button class="btn sb-button sb-fb-logIn-btn spotbie-padding text-uppercase" (click)="signInWithFB()">
+    <button class="btn spotbie-button sb-fb-logIn-btn spotbie-padding text-uppercase" (click)="signInWithFB()">
         Login with Facebook
     </button>
 
-    <button class="btn sb-button sb-google-logIn-btn spotbie-padding text-uppercase" (click)="signInWithGoogle()">
+    <button class="btn spotbie-button sb-google-logIn-btn spotbie-padding text-uppercase" (click)="signInWithGoogle()">
         Login with Google
     </button>                                                              
                   
