--- a/src/app/spotbie/spotbie-logged-out/welcome/welcome.component.html
+++ b/src/app/spotbie/spotbie-logged-out/welcome/welcome.component.html
@@ -8,7 +8,7 @@
             Connecting users to loyalty points at places to eat, events, and shopping.
         </p>
 
-        <button class='btn sb-button' (click)="switchCard()">
+        <button class='btn spotbie-button' (click)="switchCard()">
             <span>GET STARTED</span>
         </button>
 
