--- a/src/app/spotbie/features/business-features/business-features.component.html
+++ b/src/app/spotbie/features/business-features/business-features.component.html
@@ -3,7 +3,7 @@
 
 <h5 class="text-uppercase">CONNECTING PLACES TO EAT, SHOPPING, AND EVENTS TO CUSTOMERS.</h5>
 
-<button class="sb-button sb-getStarted" (click)="signUp()">
+<button class="spotbie-button sb-getStarted" (click)="signUp()">
     <span>GET STARTED</span>
 </button>
 
@@ -18,21 +18,17 @@
 
 <div class="sb-homePageIconsTable mt-4 mb-4">
     <div>
-    <img src="assets/images/home_imgs/find-places-to-eat.svg" />
-    PLACES TO EAT
+        <img src="assets/images/home_imgs/find-places-to-eat.svg" />
+        <h2>FOOD</h2>
     </div>
     <div>
-    <img src="assets/images/home_imgs/find-events.svg" />
-    EVENTS
+        <img src="assets/images/home_imgs/find-events.svg" />
+        <h2>EVENTS</h2>
     </div>        
     <div>
-    <img src="assets/images/home_imgs/find-places-for-shopping.svg" />
-    SHOPPING
+        <img src="assets/images/home_imgs/find-places-for-shopping.svg" />
+        <h2>SHOPPING</h2>
     </div>                        
-    <!--<div>
-    <img src="assets/images/home_imgs/find-users.svg" />
-    USERS
-    </div>-->
 </div>
 
 <img class="mb-4 sb-readImage cursor-pointer" style="margin-top: 0%;"
@@ -60,7 +56,7 @@
 
 </p>      
 
-<button class="sb-button sb-getStarted mt-4 mb-5" (click)="signUp()">
+<button class="spotbie-button sb-getStarted mt-4 mb-5" (click)="signUp()">
     <span>GET STARTED</span>
 </button>
 
@@ -87,7 +83,7 @@
     
 </p>      
 
-<button class="sb-button sb-getStarted mt-4 mb-5" (click)="signUp()">
+<button class="spotbie-button sb-getStarted mt-4 mb-5" (click)="signUp()">
     <span>GET STARTED</span>
 </button>
 
@@ -113,7 +109,7 @@
 
 </p>      
 
-<button class="sb-button sb-getStarted mt-4 mb-5" (click)="signUp()">
+<button class="spotbie-button sb-getStarted mt-4 mb-5" (click)="signUp()">
     <span>GET STARTED</span>
 </button>  
 
@@ -121,11 +117,3 @@
         style="margin-top: 0%;"
         src="assets/images/home_imgs/jpg/spotbie-miami-find-new-friends.jpg" 
         alt="Picture of group of friends in a circle playing cards at the beach." />
-
-<div class="sb-footer pt-5 pb-5">
-
-    <p [routerLink]="['/terms']">Terms & Privacy Policy</p>
-    <img class="mt-3 mb-3" src="assets/images/home_imgs/logo_spotbie-02.svg" />
-    <p [routerLink]="['/terms']">SpotBie, LLC.&copy; Copyright 2021</p>
-
-</div>
