--- a/src/app/spotbie/features/user-features/user-features.component.html
+++ b/src/app/spotbie/features/user-features/user-features.component.html
@@ -3,7 +3,7 @@
 
 <h5 class="text-uppercase">CONNECTING USERS, PLACES TO EAT, SHOPPING, AND EVENTS.</h5>
 
-<button class="sb-button sb-getStarted" (click)="spawnCategories('food')">
+<button class="spotbie-button sb-getStarted" (click)="spawnCategories('food')">
     <span>GET STARTED</span>
 </button>
 
@@ -56,7 +56,7 @@
     feeling hungry for that day.        
 </p>   
 
-<button class="sb-button sb-getStarted mt-4 mb-5" (click)="spawnCategories('food')">
+<button class="spotbie-button sb-getStarted mt-4 mb-5" (click)="spawnCategories('food')">
     <span>GET STARTED</span>
 </button>
 
@@ -81,7 +81,7 @@
     
 </p>      
 
-<button class="sb-button sb-getStarted mt-4 mb-5" (click)="spawnCategories('events')">
+<button class="spotbie-button sb-getStarted mt-4 mb-5" (click)="spawnCategories('events')">
     <span>GET STARTED</span>
 </button>
 
@@ -105,7 +105,7 @@
 
 </p>      
 
-<button class="sb-button sb-getStarted mt-4 mb-5" (click)="spawnCategories('shopping')">
+<button class="spotbie-button sb-getStarted mt-4 mb-5" (click)="spawnCategories('shopping')">
     <span>GET STARTED</span>
 </button>  
 
