--- a/src/app/spotbie/spotbie-logged-in/reward-menu/reward-menu.component.css
+++ b/src/app/spotbie/spotbie-logged-in/reward-menu/reward-menu.component.css
@@ -49,6 +49,7 @@
     margin-left: 10px;
     background-size: cover !important;
     background-repeat: no-repeat !important;
+    background-position: center !important;
     border-radius: 27px;
     display: inline-block;
     align-content: center;
@@ -68,9 +69,14 @@
     transform: translateY(-50%);
     background-color: rgb(0 0 0 / 69%);
     color: white;
+    padding: 5px;
     padding-top: 5px;
     padding-bottom: 5px;
     text-transform: uppercase;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+    font-size: .8rem;
 }
 
 @media (max-width: 1024px){
