--- a/src/app/spotbie/spotbie-logged-in/user-dashboard/user-dashboard.component.css
+++ b/src/app/spotbie/spotbie-logged-in/user-dashboard/user-dashboard.component.css
@@ -1,4 +1,4 @@
-h3, h2{
+h3{
     line-height: 60px;
 }
 .sb-dashboardWrapper{
@@ -8,11 +8,4 @@ h3, h2{
     border-bottom: 8px solid #332f3e;
     padding-top: 100px;
     padding-bottom: 100px;
-}
-.fa-exclamation-triangle{
-    position: relative;
-    color: #ffc107;
-    font-size: 1rem;
-    bottom: 4px;
-    margin-right: 10px;
 }
